# mcc-hat-server

./: .gitignore  README.md  setup.sh
etc/: mcc-hat-server.service
src/: CMakeLists.txt  MccHatBoard.cc  MccHatBoard.h  MccHatBoard118.cc  MccHatBoard118.h  MccHatBoard128.cc  MccHatBoard128.h  MccHatBoard134.cc  MccHatBoard134.h  MccHatServer.cc  MccHatServer.h  mcc-hat-client.cc  mcc-hat-local.cc  mcc-hat-server.cc
